--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 	
 </head>
-<body>
+<body><a name="top"></a>
 	<div data-role="page" id="home">
 		<!-- header begin -->
 		<header data-role="header">
@@ -58,31 +58,107 @@
 			</div>
 			<!-- my info end -->
 
+			<!-- 한국기획전 begin -->
+			<div class="exhibit-korea">
+			  <a href="#"><img src="images/exhibit-korea.png"/></a>
+			</div>
+			<!-- 한국기획전 begin -->
+
 			<!-- best item begin -->
-			<div class="bast-item">
-				best-item
+			<div class="best-item">
+				<div class="title"><span>赤峰</span>热卖商品</div>
+				<div class="best-item-slick">
+					<div><a href="#">
+						<img src="images/tag-best-01.png" class="tag-best"/>
+						<img src="images/sample-product1.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个 性圆领单排扣..</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+
+					<div><a href="#">
+						<img src="images/tag-best-02.png" class="tag-best"/>
+						<img src="images/sample-product2.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+
+					<div><a href="#">
+						<img src="images/tag-best-03.png" class="tag-best"/>
+						<img src="images/sample-product1.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个 性圆领单排扣..</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+
+					<div><a href="#">
+						<img src="images/tag-best-04.png" class="tag-best"/>
+						<img src="images/sample-product2.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个 性圆领单排扣..</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+
+					<div><a href="#">
+						<img src="images/tag-best-05.png" class="tag-best"/>
+						<img src="images/sample-product1.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个 性圆领单排扣..</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+
+					<div><a href="#">
+						<img src="images/tag-best-06.png" class="tag-best"/>
+						<img src="images/sample-product2.png" class="product-img"/>
+						<span class="product-name">女士休闲时尚个 性圆领单排扣..</span>
+						<span class="product-price">￥48.82</span>
+					</a></div>
+				</div>
 			</div>
 			<!-- best item end -->
+
+			<!-- 기획전 begin -->
+			<div class="exhibit-type1">
+			  <a href="#" class="big-banner"><img src="images/sample-banner-big.png"/></a>
+			  <a href="#" class="banner"><img src="images/sample-banner-midium.png"/></a>
+			  <a href="#" class="banner"><img src="images/sample-banner-midium.png"/></a>
+			</div>
+			<!-- 기획전 begin -->
+
+			<!-- recommend begin -->
+			<div class="recommend">
+				<div class="title">类目别推荐商品</div>
+			  <a href="#">
+			  	<img src="images/product-img-half1.png"/>
+			  	<span class="product-name">京东现货自营，直降800再满减</span>
+			  	<span class="product-desc">满4000减200，大疆精灵3P3S大放价，先到先得！</span>
+			  	<span class="product-price">￥3999.00</span>
+			  </a>
+
+			  <a href="#">
+			  	<img src="images/tag-korea.png" class="tag-korea"/>
+			  	<img src="images/product-img-half2.png"/>
+			  	<span class="product-name">京东现货自营，直降800再满减</span>
+			  	<span class="product-desc">满4000减200</span>
+			  	<span class="product-price">￥3999.00</span>
+			  </a>
+
+			  <a href="#">
+			  	<img src="images/tag-korea.png" class="tag-korea"/>
+			  	<img src="images/product-img-half1.png"/>
+			  	<span class="product-name">京东现货自营，直降800再满减</span>
+			  	<span class="product-desc">满4000减200，大疆精灵3P3S大放价，先到先得！</span>
+			  	<span class="product-price">￥3999.00</span>
+			  </a>
+			</div>
+			<!-- recommend begin -->
 		</div>
 		<!-- content end -->
 
 		<!-- footer begin -->
-		<div data-role="footer">
-			<div class="ui-input-btn ui-btn icon-footer home ui-btn-icon-top">网站
-        <input type="button" data-enhanced="true" value="Enhanced - Top">
-      </div>
-			<div class="ui-input-btn ui-btn icon-footer wishlist ui-btn-icon-top">愿望目录
-        <input type="button" data-enhanced="true" value="Enhanced - Top">
-      </div>
-			<div class="ui-input-btn ui-btn icon-footer cart ui-btn-icon-top">购物篮
-        <input type="button" data-enhanced="true" value="Enhanced - Top">
-      </div>
-			<div class="ui-input-btn ui-btn icon-footer order ui-btn-icon-top">订单/配送
-        <input type="button" data-enhanced="true" value="Enhanced - Top">
-      </div>
-			<div class="ui-input-btn ui-btn icon-footer mypage ui-btn-icon-top">我的页面
-        <input type="button" data-enhanced="true" value="Enhanced - Top">
-      </div>
+		<a href="#top" data-position="fixed" data-tap-toggle="false" class="go-top"></a>
+		<div data-role="footer" data-position="fixed" data-tap-toggle="false">
+			<div class="ui-input-btn ui-btn icon-footer home ui-btn-icon-top">网站<input type="button" data-enhanced="true" value="Enhanced - Top"></div>
+			<div class="ui-input-btn ui-btn icon-footer wishlist ui-btn-icon-top">愿望目录<input type="button" data-enhanced="true" value="Enhanced - Top"></div>
+			<div class="ui-input-btn ui-btn icon-footer cart ui-btn-icon-top">购物篮<input type="button" data-enhanced="true" value="Enhanced - Top"></div>
+			<div class="ui-input-btn ui-btn icon-footer order ui-btn-icon-top">订单/配送<input type="button" data-enhanced="true" value="Enhanced - Top"></div>
+			<div class="ui-input-btn ui-btn icon-footer mypage ui-btn-icon-top">我的页面<input type="button" data-enhanced="true" value="Enhanced - Top"></div>
 		</div>
 		<!-- footer end -->
 	</div>
@@ -94,6 +170,12 @@
       	dots:true,
       	autoplay: true,
   			autoplaySpeed: 4000,
+      });
+
+      $('.best-item-slick').slick({
+      	infinite: false,
+  			speed: 300,
+  			slidesToShow: 3.5
       });
 
       $('.btn-cate-more').click(function() {
