--- a/detail-info.html
+++ b/detail-info.html
@@ -31,6 +31,21 @@
 			  <div><a href="#"><img src="images/sample-product-detail2.png"/></a></div>
 			</div>
 			<!-- detail product img swipe begin -->
+
+			<!-- detail procut info begin -->
+			<div class="detailinfo-info">
+				<span class="desc">韩国直邮Innisfree悦诗风吟绿茶精萃保湿系列 夏季男女士清爽保 湿补水 眼唇脸部卸妆水300ml + 绿茶籽菁华面霜 50ml</span>
+				<span class="price"><strike>￥223.50</strike> ￥210.00</span>
+			</div>
+			<!-- detail procut info end -->
+
+			<!-- detail procut option begin -->
+			<div class="detailinfo-option">option</div>
+			<!-- detail procut option end -->
+
+			<!-- detail procut side info begin -->
+			<div class="detailinfo-side-info">side</div>
+			<!-- ddetail procut side info  end -->
 		</div>
 	</div>
 
