--- a/category-main.html
+++ b/category-main.html
@@ -14,7 +14,7 @@
 	
 </head>
 <body>
-	<div data-role="page" id="home">
+	<div data-role="page" id="category-main">
 		<!-- header begin -->
 		<header data-role="header">
 			<h1><input type="search" name="password" id="search" value="" placeholder=""></h1>
