--- a/detail-info.html
+++ b/detail-info.html
@@ -61,7 +61,7 @@
 
 			<!-- detail product side info begin -->
 			<div class="detailinfo-side-info">
-				<div class="side-info-cell shadow-inset">
+				<div class="side-info-cell">
 					<span class="side-info-icon truck"></span>
 					<label>航运</label>
 					<span class="desc">请选择邮寄地址</span>
@@ -81,19 +81,19 @@
 					</table>
 				</div>
 
-				<div class="side-info-cell shadow-inset">
+				<div class="side-info-cell">
 					<span class="side-info-icon monitor"></span>
 					<label>商品详细内容</label>
 					<a href="#" class="icon-next"></a>
 				</div>
 
-				<div class="side-info-cell shadow-inset">
+				<div class="side-info-cell">
 					<span class="side-info-icon clipboard"></span>
 					<label>配送情报</label>
 					<a href="#" class="icon-next"></a>
 				</div>
 
-				<div class="side-info-cell shadow-inset">
+				<div class="side-info-cell">
 					<span class="side-info-icon replace"></span>
 					<label>退货/退换</label>
 					<a href="#" class="icon-next"></a>
