--- a/file-list.html
+++ b/file-list.html
@@ -23,6 +23,8 @@
 		<a href="detail-info.html">제품 상세 페이지</a>
 		<a href="order.html">주문 페이지</a>
 		<a href="order-complete.html">주문 완료 페이지</a>
+		<a href="exhibit.html">기획 페이지</a>
+		<a href="specialist.html">전문관 페이지</a>
 	</div>
 
 	<script src="js/slick.min.js"></script>
