수정사항 작업 중

--- a/category-main.html
+++ b/category-main.html
@@ -42,7 +42,7 @@
 
 					<li class="pull-right sort-option">
 						<a href="#" class="arrow-up">新品</a>
-						<a href="#" class="arrow-down">价格</a>
+						<a href="#" class="arrow-down margin-r50">价格</a>
 					</li>
 				</ul>
 			</div>
