--- a/detail-info.html
+++ b/detail-info.html
@@ -23,6 +23,13 @@
 		</header>
 		<!-- header end -->
 
+		<!-- header - 팝업 상단 begin 예시입니다  -->
+		<header data-role="header" class="border-bottom-blue">
+			<h1>绿茶籽菁华面霜</h1>
+			<a href="#" class="icon-header back fr"></a>
+		</header>
+		<!-- header - 팝업 상단 end -->
+
 		<!-- content begin -->
 		<div role="main" class="ui-content">
 			<!-- detail product img swipe begin -->
