--- a/file-list.html
+++ b/file-list.html
@@ -11,20 +11,40 @@
 	<script src="js/jquery.mobile-1.4.5.min.js"></script>
 
 	<style>
-		a{display:block;padding:.6em .8em;width:100%;border-bottom:1px solid #efefef;}
+		a{display:block;padding:.6em .5em;width:100%;border-bottom:1px solid #efefef;}
 	</style>
 	
 </head>
 <body>
 	<div data-role="page">
-		<a href="main.html">메인페이지</a>
-		<a href="category.html">카테고리 페이지</a>
-		<a href="category-main.html">카테고리 메인 페이지</a>
-		<a href="detail-info.html">제품 상세 페이지</a>
-		<a href="order.html">주문 페이지</a>
-		<a href="order-complete.html">주문 완료 페이지</a>
-		<a href="exhibit.html">기획 페이지</a>
-		<a href="specialist.html">전문관 페이지</a>
+		<ol>
+			<li><a href="main.html" data-ajax="false">메인페이지</a></li>
+			<li><a href="category.html" data-ajax="false">카테고리 페이지</a></li>
+			<li><a href="category-main.html" data-ajax="false">카테고리 메인 페이지</a></li>
+			<li><a href="detail-info.html" data-ajax="false">제품 상세 페이지</a></li>
+			<li><a href="order.html" data-ajax="false">주문 페이지</a></li>
+			<li><a href="order-complete.html" data-ajax="false">주문 완료 페이지</a></li>
+			<li><a href="exhibit.html" data-ajax="false">기획전 페이지</a></li>
+			<li><a href="specialist.html" data-ajax="false">전문관 페이지</a></li>
+			<li><a href="mypage.html" data-ajax="false">마이페이지</a></li>
+			<li><a href="mypage-order.html" data-ajax="false">마이페이지 - 주문/배송(반품,취소내역)</a></li>
+			<li><a href="mypage-order-detail.html" data-ajax="false">마이페이지 - 주문 - 상세</a></li>
+			<li><a href="mypage-cart.html" data-ajax="false">마이페이지 - 장바구니(위시리스트/최근본상품)</a></li>
+			<li><a href="mypage-point.html" data-ajax="false">마이페이지 - 나의 포인트</a></li>
+			<li><a href="mypage-point-history.html" data-ajax="false">마이페이지 - 나의 포인트 - 적립/사용 내역</a></li>
+			<li><a href="mypage-counsellist.html" data-ajax="false">마이페이지 - 상담목록/내용</a></li>
+			<li><a href="mypage-m2m-counsel.html" data-ajax="false">마이페이지 - 1:1 상담</a></li>
+			<li><a href="mypage-myinfo.html" data-ajax="false">마이페이지 - 개인정보 수정</a></li>
+			<li><a href="mypage-password.html" data-ajax="false">마이페이지 - 비밀번호 수정</a></li>
+			<li><a href="mypage-setting.html" data-ajax="false">마이페이지 - 설정</a></li>
+			<li><a href="mypage-setting-terms.html" data-ajax="false">마이페이지 - 설정 - 이용약관</a></li>
+			<li><a href="login.html" data-ajax="false">로그인 페이지</a></li>
+			<li><a href="login-regi.html" data-ajax="false">로그인 페이지 - 회원등록 - 직원확인</a></li>
+			<li><a href="login-regi-info.html" data-ajax="false">로그인 페이지 - 회원등록 - 직원정보입력</a></li>
+			<li><a href="login-password.html" data-ajax="false">로그인 페이지 - 비밀번호 찾기</a></li>
+			<li>론처 이미지</li>
+			<li></li>
+		</ol>
 	</div>
 
 	<script src="js/slick.min.js"></script>
