--- a/order-complete.html
+++ b/order-complete.html
@@ -95,7 +95,7 @@
 				<div class="side-info-cell bg-light-yellow">
 					<span class="side-info-icon basket"></span>
 					<label>合计</label>
-					<span class="desc"><strong class="price-color">25 元</strong></span>
+					<span class="desc pull-right margin-r10"><strong class="price-color">25 元</strong></span>
 				</div>
 			</div>
 			<!-- detail product side info end -->	
