--- a/order.html
+++ b/order.html
@@ -52,7 +52,7 @@
 				<div class="side-info-cell bg-light-yellow">
 					<span class="side-info-icon basket"></span>
 					<label>合计</label>
-					<span class="desc">金额 310 + 运费 25 = <strong class="price-color">25 元</strong></span>
+					<span class="desc pull-right margin-r10">金额 310 + 运费 25 = <strong class="price-color">25 元</strong></span>
 				</div>
 
 				<div class="side-info-cell">
