장바구니 수정사항, 뱃지추가 요청사항 및 앱 아이콘 등등 @,.@

--- a/header&footer.html
+++ b/header&footer.html
@@ -33,7 +33,7 @@
 	<div data-role="footer" data-position="fixed" data-tap-toggle="false" class="ui-footer">
 		<a class="ui-input-btn ui-btn icon-footer home ui-btn-icon-top">网站</a>
 		<a class="ui-input-btn ui-btn icon-footer wishlist ui-btn-icon-top">愿望目录</a>
-		<a class="ui-input-btn ui-btn icon-footer cart ui-btn-icon-top">购物篮</a>
+		<a class="ui-input-btn ui-btn icon-footer cart ui-btn-icon-top"><span class="badge">12</span>购物篮</a>
 		<a class="ui-input-btn ui-btn icon-footer order ui-btn-icon-top">订单/配送</a>
 		<a class="ui-input-btn ui-btn icon-footer mypage ui-btn-icon-top">我的页面</a>
 	</div>
