--- a/mypage-cart.html
+++ b/mypage-cart.html
@@ -29,6 +29,8 @@
 			<div class="order-product-info">
 				<!-- cell begin -->
 				<div class="product-img">
+					<!--하단의 div 추가입니-->
+					<div class="cart-select-checkbox"><input type="checkbox" name="checkbox-1a" id="checkbox-1a" checked=""><label for="checkbox-1a"></label></div>
 					<img src="images/tag-korea.png" class="tag-korea">
 					<a href="#"><img src="images/sample-product-detail1.png"/></a>
 				</div>
@@ -47,6 +49,8 @@
 
 				<!-- cell begin -->
 				<div class="product-img">
+					<!--하단의 div 추가입니-->
+					<div class="cart-select-checkbox"><input type="checkbox" name="checkbox-1b" id="checkbox-1b"><label for="checkbox-1b"></label></div>
 					<img src="images/tag-korea.png" class="tag-korea">
 					<a href="#"><img src="images/sample-product-detail1.png"/></a>
 				</div>
@@ -64,6 +68,15 @@
 				<!-- cell end -->
 			</div>
 			<!-- order product info end -->
+
+			<!-- 추가 사항 begin -->
+			<div class="ui-checkbox margin-all10"><label for="checkbox-1a" class="ui-btn ui-corner-all ui-btn-inherit ui-btn-icon-left ui-checkbox-on">发件人名称变更</label></div>
+			<div class="margin-all15">
+				<span>已选 <strong class="price-color">1</strong> 件</span>
+				<span class="pull-right price-color bold fontsize13">￥420.00</span>
+			</div>
+			<div class="margin-all10"><button class="ui-btn ui-corner-all btn-blue">立即购买</button></div>
+			<!-- 추가 사항 end -->
 		</div>
 	</div>
 
